--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.0+4
-  country_code_picker: ^1.3.11
+  country_pickers: ^1.2.1
   built_value: ^7.1.0
 
 dev_dependencies:
